force-app/main/default/objects/MasterActivityLogisticsAttribute__c/MasterActivityLogisticsAttribute__c.object-meta.xml
<CustomObject>
    <label>Master Activity Logistics Attribute</label>
    <nameField>
        <displayFormat>MAA-{00000}</displayFormat>
        <label>Master Activity Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Activity Logistics Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>