force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/ActivityName__c.field-meta.xml
<CustomField>
    <fullName>ActivityName__c</fullName>
    <formula>MasterActivity__r.ActivityName__c</formula>
    <label>ActivityName</label>
    <type>Text</type>
</CustomField>