force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>