force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/FilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>FilterCriteria__c</fullName>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>