force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/isAccessible__c.field-meta.xml
<CustomField>
    <fullName>isAccessible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAccessible(Output)</label>
    <type>Checkbox</type>
</CustomField>