force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/LBSExceptionType__c.field-meta.xml
<CustomField>
    <fullName>LBSExceptionType__c</fullName>
    <label>LBS Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>N/A</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Origin Nomi</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Small&amp;Spot Forwarding</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Medium-sized Forwarding</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Square Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>