force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/LogisticsBizDevelopmentType__c.field-meta.xml
<CustomField>
    <fullName>LogisticsBizDevelopmentType__c</fullName>
    <label>Biz. Development Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>BPO</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Project</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Etc.</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>e-Commerce</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>GSA/CSA</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Forwarding</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Square</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>