force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/LogisticsCustomerType__c.field-meta.xml
<CustomField>
    <fullName>LogisticsCustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SECSET</fullName>
                <label>SEC-SET</label>
            </value>
            <value>
                <fullName>SECDS</fullName>
                <label>SEC-DS</label>
            </value>
            <value>
                <fullName>NSEC</fullName>
                <label>Samsung Affiliates</label>
            </value>
            <value>
                <fullName>EXTAC</fullName>
                <label>External</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>