force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/MasterActivity__c.field-meta.xml
<CustomField>
    <fullName>MasterActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Activity</label>
    <referenceTo>MasterActivity__c</referenceTo>
    <relationshipName>MasterActivityAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>