force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>StageName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z01</fullName>
                <label>Identified</label>
            </value>
            <value>
                <fullName>Z02</fullName>
                <label>Validated</label>
            </value>
            <value>
                <fullName>Z03</fullName>
                <label>Qualified</label>
            </value>
            <value>
                <fullName>Z04</fullName>
                <label>Solutioned</label>
            </value>
            <value>
                <fullName>Z05</fullName>
                <label>Won</label>
            </value>
            <value>
                <fullName>Z06</fullName>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Z07</fullName>
                <label>Dropped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>