force-app/main/default/objects/MasterActivityLogisticsAttribute__c/fields/TransactionName__c.field-meta.xml
<CustomField>
    <fullName>TransactionName__c</fullName>
    <formula>TEXT(MasterActivity__r.TransactionName__c)</formula>
    <label>TransactionName</label>
    <type>Text</type>
</CustomField>