force-app/main/default/objects/MasterActivityLogisticsAttribute__c/recordTypes/Condition.recordType-meta.xml
<RecordType>
    <fullName>Condition</fullName>
    <active>true</active>
    <label>Condition</label>
</RecordType>