force-app/main/default/objects/MasterActivityLogisticsAttribute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ActivityName__c</columns>
    <columns>TransactionName__c</columns>
    <columns>Attribute__c</columns>
    <columns>StageName__c</columns>
    <columns>Type__c</columns>
    <columns>LBSExceptionType__c</columns>
    <columns>LogisticsBizDevelopmentType__c</columns>
    <columns>DefaultValue__c</columns>
    <columns>isAccessible__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TransactionName__c</field>
        <operation>equals</operation>
        <value>2.3.1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MasterActivityLogisticsAttribute__c.Condition,MasterActivityLogisticsAttribute__c.Definition</value>
    </filters>
    <label>All</label>
</ListView>